--------------------------------------------------------------------------------
name:          byline
version:       0.3.2.1
synopsis:      Library for creating command-line interfaces (colors, menus, etc.)
homepage:      https://code.devalot.com/open/byline
bug-reports:   https://code.devalot.com/open/byline/issues
license:       BSD2
license-file:  LICENSE
author:        Peter Jones <pjones@devalot.com>
maintainer:    Peter Jones <pjones@devalot.com>
copyright:     Copyright: (c) 2015-2019 Peter J. Jones
category:      System, User Interfaces
build-type:    Simple
stability:     experimental
cabal-version: 1.18
description:
  Byline simplifies writing interactive terminal applications by
  building upon @ansi-terminal@ and @haskeline@.  This makes it
  possible to print messages and prompts that include terminal escape
  sequences such as colors that are automatically disabled when
  standard input is a file.  It also means that Byline works on both
  POSIX-compatible systems and on Windows.
  .
  The primary features of Byline include printing messages, prompting
  for input, and generating custom menus.  It was inspired by the
  @highline@ Ruby library and the @terminal@ library by Craig Roche.

--------------------------------------------------------------------------------
extra-source-files:
  CHANGES.md
  README.md
  examples/*.hs

--------------------------------------------------------------------------------
source-repository head
  type: git
  location: https://code.devalot.com/open/byline.git

--------------------------------------------------------------------------------
flag build-examples
  description: Build examples when building the library.
  manual: True
  default: False

--------------------------------------------------------------------------------
library
  exposed-modules:
    System.Console.Byline
    System.Console.Byline.Color
    System.Console.Byline.Completion
    System.Console.Byline.Internal.Byline
    System.Console.Byline.Internal.Color
    System.Console.Byline.Internal.Completion
    System.Console.Byline.Internal.Render
    System.Console.Byline.Internal.Types
    System.Console.Byline.Menu
    System.Console.Byline.Modifiers
    System.Console.Byline.Primitive
    System.Console.Byline.Stylized

  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -fwarn-incomplete-uni-patterns

  build-depends: base          >= 4.7  && < 5.0
               , ansi-terminal >= 0.6  && < 0.10
               , colour        >= 2.3  && < 2.4
               , containers    >= 0.5  && < 0.7
               , exceptions    >= 0.8  && < 0.11
               , haskeline     >= 0.7  && < 0.8
               , mtl           >= 2.1  && < 2.3
               , terminfo-hs   >= 0.1  && < 0.3
               , text          >= 0.11 && < 1.3
               , transformers  >= 0.3  && < 0.6

  if !impl(ghc >= 8.0)
    build-depends: semigroups == 0.18.*

--------------------------------------------------------------------------------
executable simple
  main-is: examples/simple.hs
  default-language: Haskell2010
  ghc-options: -Wall -fwarn-incomplete-uni-patterns
  build-depends: base, byline, text

  if !flag(build-examples)
    buildable: False

--------------------------------------------------------------------------------
executable menu
  main-is: examples/menu.hs
  default-language: Haskell2010
  ghc-options: -Wall -fwarn-incomplete-uni-patterns
  build-depends: base, byline, text

  if !flag(build-examples)
    buildable: False
